--- a/src/pages/educator/video-quizzes/[year]/LessonsListPage.module.css
+++ b/src/pages/educator/video-quizzes/[year]/LessonsListPage.module.css
@@ -9,7 +9,7 @@
 
 .backLink {
   display: inline-block;
-  margin-bottom: 20px;
+  margin-bottom: 1rem;
   color: var(--backlink-color);
   transition:
     color 0.3s ease,
