--- a/src/pages/lessons/[year]/LessonsList.module.css
+++ b/src/pages/lessons/[year]/LessonsList.module.css
@@ -26,9 +26,9 @@
   transition:
     transform 0.2s,
     box-shadow 0.2s;
-  margin: 0.5rem; /* Space between buttons */
+  margin: 0.5rem;
   box-shadow: 0px 5px 10px rgba(0, 123, 255, 0.2);
-  flex: 1 1 calc(50% - 0.5rem); /* Allow shrink, base width 50% minus half of gap */
+  flex: 1 1 calc(50% - 0.5rem);
   max-width: calc(50% - 0.5rem);
 }
 
@@ -36,12 +36,11 @@
   background-color: #e76f51;
   box-shadow: 0 3px 8px 0 rgba(0, 118, 255, 0.37);
   transform: scale(1.04);
-  /* Moves button up slightly when hovered */
 }
 
 @media screen and (min-width: 1024px) {
   .lessonButton {
-    width: calc(25% - 1rem); /* 4 buttons per row */
+    width: calc(25% - 1rem);
     padding: 1rem 2rem;
     font-size: 1.5rem;
   }
