--- a/src/pages/lessons/[year]/[lesson]/LessonDetails.module.css
+++ b/src/pages/lessons/[year]/[lesson]/LessonDetails.module.css
@@ -3,6 +3,17 @@
   padding: 1.5rem;
 }
 
+.LessonTitle {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  padding-left: 1rem;
+}
+
+.LessonDescription {
+  font-size: 1.2rem;
+  padding-left: 1rem;
+}
+
 @media screen and (max-width: 768px) {
   .LessonContainer {
     padding: 1rem;
