--- a/src/pages/educator/VideoQuizUploadForm.module.css
+++ b/src/pages/educator/VideoQuizUploadForm.module.css
@@ -8,9 +8,8 @@
 }
 
 .title {
-  font-size: 24px;
+  font-size: 1.6rem;
   color: var(--text-color);
-  margin-bottom: 10px;
 }
 
 .backLink {
@@ -28,8 +27,8 @@
 
 .sampleButton {
   display: inline-block;
-  margin-top: 20px;
-  padding: 10px 20px;
+  margin-top: 1rem;
+  padding: 0.5rem 1rem;
   background-color: var(--button-bg-color);
   color: var(--button-text-color);
   border: none;
