styles: global.css --tab-bg-color light theme to changed to #95a5a6 instead of #fff

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,7 +16,7 @@
   --form-bg-color: #fff;
   --border-color: #dae0e7;
   --tab-text-color: #292929;
-  --tab-bg-color: #fff;
+  --tab-bg-color: #95a5a6;
   --button-bg-color: #007bff;
   --button-text-color: #fff;
   --button-hover-bg-color: #0062cc;
