--- a/src/components/VideoQuizUpload/QuestionDetailsInput.module.css
+++ b/src/components/VideoQuizUpload/QuestionDetailsInput.module.css
@@ -1,6 +1,6 @@
 .questionDetailInputContainer {
-  padding: 10px;
-  margin-bottom: 15px;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .questionDetailInputLabel {
@@ -12,9 +12,8 @@
 
 .questionDetailInput {
   width: 100%;
-  padding: 10px;
+  padding: 0.8rem;
   border: 1px solid #ccc;
   border-radius: 2px;
-  background-color: white;
   margin-bottom: 0.75rem;
 }
