--- a/src/components/VideoQuizUpload/VideoDetailsInput.module.css
+++ b/src/components/VideoQuizUpload/VideoDetailsInput.module.css
@@ -1,6 +1,6 @@
 .videoDetailInputContainer {
-  padding: 10px;
-  margin-bottom: 15px;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .videoDetailInputLabel {
@@ -12,7 +12,7 @@
 
 .videoDetailInput {
   width: 100%;
-  padding: 10px;
+  padding: 0.8rem;
   border: 1px solid #ccc;
   border-radius: 2px;
   margin-bottom: 0.75rem;
