styles: tabButton:hover classname added to improve user feedback on selecting tabs in Submit Quiz Form

--- a/src/components/VideoQuizUpload/QuizTabButton.module.css
+++ b/src/components/VideoQuizUpload/QuizTabButton.module.css
@@ -15,6 +15,10 @@
   transition: background-color 0.3s;
 }
 
+.tabButton:hover {
+  color: var(--remove-question-btn-hover-color);
+}
+
 .activeTab {
   background-color: var(
     --accent-color
