styles: addButton:hover color added to improve user feedback on adding new questions tab

--- a/src/components/VideoQuizUpload/VideoQuizUploadForm.module.css
+++ b/src/components/VideoQuizUpload/VideoQuizUploadForm.module.css
@@ -22,6 +22,10 @@
   cursor: pointer;
 }
 
+.addButton:hover {
+  color: var(--remove-question-btn-hover-color);
+}
+
 .tabButton {
   flex: 1; /* Button should fill the entire tab */
   background: transparent;
