styles: comment added to state this extraLessonListPage.module.css file is used across the ExtraLessonListPage and LessonListPage component

--- a/src/pages/educator/extra-video-quizzes/[year]/ExtraLessonsListPage.module.css
+++ b/src/pages/educator/extra-video-quizzes/[year]/ExtraLessonsListPage.module.css
@@ -1,3 +1,6 @@
+/* Shared Stylesheet: This stylesheet is used in both 
+  the ExtraLessonsListPage and the LessonsListPage components. */
+
 .container {
   margin: 1rem;
   padding: 1rem;
