fix: comment added to clarify the use of AvailableYears.module.css in both extra and lessons page

--- a/src/pages/extra/AvailableYears.module.css
+++ b/src/pages/extra/AvailableYears.module.css
@@ -1,3 +1,5 @@
+/* AvailableYears.module.css is shared in the extra page and lessons page */
+
 .yearsContainer {
   padding: 2rem;
   display: flex;
